
Implemented newparams() and saveparams() in puppies.tool submodule.
This let's the user create a new modelparams file with default values
and to update an existing file with values from a Fit() object,
respectively.

*****

Minor corrections in _quadramp.c, _mandeltr.c, and _mandelecl.c
light-curve models.

*****

Updated fit() in pup_model.py to return the Model() object and store
best-fitting values into modelparams file(s).
Added update argument in evalmdel to update the models' parameters.


*****  Di 17. Apr 16:27:31 CEST 2018  *****

Combined all ramp models into ramps.py, where the specific models
inherit from the Ramp() superclass.
Files need to be properly documented.

*****

Updated bliss and ramp light-curve classes, renamed the pup argument
to obj in the settup() method.

*****

Added eclipse submodule, which implements mandelecl() and eclipse()
light-curve models.

*****

Adapted puppies.models' init to new ramps.py file and eclipse module.  
Removed mandelecl.py file (replaced with eclipse submodule).

*****

Updated Makefile to include submodules
and make it less verbose.

*****

Adapted pup_model.py to latest changes in puppies.models.


*****  Sun May 27 22:57:36 CEST 2018  *****

Renamed pup.model.fit() to lcfit() to avoid variable name conflict.
Added SDR and BIC calculations to laika object during lcfit().
For multiple model fits per pup requesting chiscale, scale according
to fit with lowest SDR.


*****  Mon Jun 11 01:06:49 CEST 2018  *****

Updated MC3 submodule.

*****

Got Light-curve MCMC up and running.
Wrote a basic screen summary output.
TBD: LC plot.
TBD: Put LC modeling into output folder.
TBD: Setup LC log.
TBD: Store LC output into pickle file.


*****  Sat Jun 16 10:57:25 CEST 2018  *****

Renamed spitzer.py to pup_spitzer.py


*****  Sun Jun 17 12:48:05 CEST 2018  *****

Reorganized the project, adding the core and inst modules that
contain the main reduction steps and the dataset initialization
routines, respectively.

*****
